force-app/main/default/objects/RSC_Process__c/RSC_Process__c.object-meta.xml
<CustomObject>
    <label>RSC Process</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>RSC Process</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RSC Process</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>