force-app/main/default/objects/RSC_Process__c/fields/AccountID__c.field-meta.xml
<CustomField>
    <fullName>AccountID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account ID</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>RSC Process</relationshipLabel>
    <relationshipName>RSC_Process</relationshipName>
    <type>Lookup</type>
</CustomField>