force-app/main/default/objects/RSC_Process__c/fields/Customer_Polaris_URL__c.field-meta.xml
<CustomField>
    <fullName>Customer_Polaris_URL__c</fullName>
    <formula>AccountID__r.Customer_URL__c</formula>
    <label>Customer Polaris URL</label>
    <type>Text</type>
</CustomField>