force-app/main/default/objects/RSC_Process__c/fields/Customer_Suggest_URL__c.field-meta.xml
<CustomField>
    <fullName>Customer_Suggest_URL__c</fullName>
    <description>Auto-populated if you have RSC Account.</description>
    <inlineHelpText>Auto-populated if you have RSC Account.</inlineHelpText>
    <label>Customer Polaris URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>