force-app/main/default/objects/RSC_Process__c/fields/Entitlement__c.field-meta.xml
<CustomField>
    <fullName>Entitlement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Entitlement</label>
    <referenceTo>Entitlement</referenceTo>
    <relationshipLabel>RSC Process</relationshipLabel>
    <relationshipName>RSC_Process</relationshipName>
    <type>Lookup</type>
</CustomField>