force-app/main/default/objects/RSC_Process__c/fields/Free_trail__c.field-meta.xml
<CustomField>
    <fullName>Free_trail__c</fullName>
    <label>Free Trial</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Free Trial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>