force-app/main/default/objects/RSC_Process__c/fields/Polaris_Suggest_URL__c.field-meta.xml
<CustomField>
    <fullName>Polaris_Suggest_URL__c</fullName>
    <description>Please suggest Polaris URL, when kept blank system creates URL based on contact email</description>
    <inlineHelpText>Please suggest Polaris URL, when kept blank system creates URL based on contact email</inlineHelpText>
    <label>Polaris Suggested URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>