force-app/main/default/objects/RSC_Process__c/fields/PolarisRegion__c.field-meta.xml
<CustomField>
    <fullName>PolarisRegion__c</fullName>
    <label>Polaris Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Europe</fullName>
            </value>
            <value>
                <fullName>US</fullName>
            </value>
            <value>
                <fullName>Switzerland</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>