force-app/main/default/objects/RSC_Process__c/fields/PolarisRequestID__c.field-meta.xml
<CustomField>
    <fullName>PolarisRequestID__c</fullName>
    <label>PolarisRequestID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>