force-app/main/default/objects/RSC_Process__c/fields/RSC_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>RSC_Contact_Email__c</fullName>
    <label>RSC Contact Email</label>
    <type>Email</type>
</CustomField>